--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
                <li> <button class="btn">Hire me</button></li>
             </ul>
         </nav>
+
+        <section class="banner">
+            <div class="banner-content">
+                <h2>Hi, I'm </h2>
+                <h1> Mary Hardy</h1>
+                <br>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <br>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact me</button>
+
+            </div>
+
+            <div class="banner-img">
+                <img src="images/hardy.png" alt="">
+
+            </div>
+        </section>
     </header>
+
+
     
 </body>
 </html>
