--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="banner">
             <div class="banner-content">
                 <h2>Hi, I'm </h2>
-                <h1> Mary Hardy</h1>
+                <h1> MR Mary Hardy</h1>
                 <br>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <br>
