--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="banner">
             <div class="banner-content">
                 <h2>Hi, I'm </h2>
-                <h1> MR Mary Hardy</h1>
+                <h1> Muhiminul Shafin</h1>
                 <br>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <br>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="banner-img">
-                <img src="images/hardy.png" alt="">
+                <img src="images/shafin.png" alt="">
 
             </div>
         </section>
@@ -53,19 +53,19 @@
            <div class="about-info"> 
              <div class="info-card">
             <p>Name:</p>
-            <h4>Mary Hardy</h4>
+            <h4>Muhiminul Shafin</h4>
            </div>
             <div class="info-card">
             <p>Email:</p>
-            <h4>maryhardy@example.com</h4>
+            <h4>shafinmuhiminul28@gmail.com</h4>
            </div>
             <div class="info-card">
             <p>Date of Birth:</p>
-            <h4>12th March 1990</h4>
+            <h4>16th March 2002</h4>
            </div>
             <div class="info-card">
             <p>From:</p>
-            <h4>Los Angeles</h4>
+            <h4>Dhaka, Bangladesh</h4>
            </div>
 
             
@@ -80,7 +80,7 @@
         <div class="skills-container">
             <div class="section-heading">
                 <h2>What I do</h2>
-                <P>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</P>
+                <P>I have more than 2 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</P>
             </div>
 
                 <div class="skills-box">
@@ -118,8 +118,8 @@
             <div class="education">
                 <h2 class="section-title">My Education</h2>
                  <div class="resume-card">
-                    <h3 class="card-title">Master in Computer Engineering</h3>
-                     <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <h3 class="card-title">Bachelor in Computer Engineering</h3>
+                     <p class="card-info">United International University / 2022 - Present</p>
                      <p class="card-description">List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                       <hr>
@@ -127,15 +127,15 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
 
                  </div>
                   <div class="resume-card">
-                    <h3 class="card-title">Master in Computer Engineering</h3>
-                     <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <h3 class="card-title">Higher Secondary Certificate</h3>
+                     <p class="card-info">Bangladesh Navy College / 2018 - 2020</p>
                      <p class="card-description">List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                       <hr>
 
                        <div class="resume-card">
-                    <h3 class="card-title">Master in Computer Engineering</h3>
-                     <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <h3 class="card-title">Senior Secondary Certificate</h3>
+                     <p class="card-info">Banani Bidyaniketan / 2007 - 2018</p>
                      <p class="card-description">List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                       <hr>
